@@ -41,7 +41,7 @@ bool(false)
 Warning: gmp_strval() expects parameter 2 to be long, string given in %s on line %d
 NULL
 
-Warning: gmp_strval(): Bad base for conversion: -1 in %s on line %d
+Warning: gmp_strval(): Bad base for conversion: -1 (should be between 2 and %d or -2 and -%d) in %s on line %d
 bool(false)
 
 Warning: gmp_strval() expects parameter 2 to be long, string given in %s on line %d
@@ -51,18 +51,18 @@ Warning: gmp_strval(): supplied resource is not a valid GMP integer resource in 
 bool(false)
 string(7) "9765456"
 
-Warning: gmp_strval(): Bad base for conversion: -1 in %s on line %d
+Warning: gmp_strval(): Bad base for conversion: -1 (should be between 2 and %d or -2 and -%d) in %s on line %d
 bool(false)
 
-Warning: gmp_strval(): Bad base for conversion: 100000 in %s on line %d
+Warning: gmp_strval(): Bad base for conversion: 100000 (should be between 2 and %d or -2 and -%d) in %s on line %d
 bool(false)
 string(7) "9765456"
 string(8) "-3373333"
 
-Warning: gmp_strval(): Bad base for conversion: -1 in %s on line %d
+Warning: gmp_strval(): Bad base for conversion: -1 (should be between 2 and %d or -2 and -%d) in %s on line %d
 bool(false)
 
-Warning: gmp_strval(): Bad base for conversion: 100000 in %s on line %d
+Warning: gmp_strval(): Bad base for conversion: 100000 (should be between 2 and %d or -2 and -%d) in %s on line %d
 bool(false)
 string(8) "-3373333"
 
